@@ -115,6 +115,10 @@ Extension Modules
 - bsddb: fix DBCursor.pget() bug with keyword argument names when no data
   parameter is supplied.  [SF pybsddb bug #1477863]
 
+- bsddb: the __len__ method of a DB object has been fixed to return correct
+  results.  It could previously incorrectly return 0 in some cases.
+  Fixes SF bug 1493322 (pybsddb bug 1184012).
+
 
 Library
 -------
